main/default/objects/Allstream_Service_Order__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>This is a long text field made to hold custom notes.</description>
    <inlineHelpText>This is a long text field made to hold custom notes.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>