main/default/objects/Allstream_Service_Order__c/fields/Old_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Order_Number__c</fullName>
    <label>Old Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>