main/default/objects/Allstream_Service_Order__c/fields/Order_Stage__c.field-meta.xml
<CustomField>
    <fullName>Order_Stage__c</fullName>
    <inlineHelpText>Suggestion for description: this is the value of the Order Stage on the associated Service Order.</inlineHelpText>
    <label>Order Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Customer Signature</fullName>
            </value>
            <value>
                <fullName>CSE Review</fullName>
            </value>
            <value>
                <fullName>Order Rejected</fullName>
            </value>
            <value>
                <fullName>Order Submitted</fullName>
            </value>
            <value>
                <fullName>6 - Pipeline</fullName>
            </value>
            <value>
                <fullName>7 - Ready for Billing</fullName>
            </value>
            <value>
                <fullName>8 - Accepted by Billing</fullName>
            </value>
            <value>
                <fullName>9 - Billing Updated</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>5.9 - Revenue Commitment</fullName>
            </value>
            <value>
                <fullName>9.1 - PG Best Guess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>