main/default/objects/Allstream_Service_Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Install</fullName>
            </value>
            <value>
                <fullName>Move</fullName>
            </value>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Disconnect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>